<img src="@item.Image" alt="Image" />

--- a/caisse/appsettings.json
+++ b/caisse/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "caisseContext": "Server=(localdb)\\mssqllocaldb;Database=caisseContext-31d3cec5-126f-4f9a-8c42-6f77a3979f6e;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
